--- a/1. Building a To-Do List Without Framework/submission/index.html
+++ b/1. Building a To-Do List Without Framework/submission/index.html
@@ -19,6 +19,7 @@
     <body>
         <div class="container-fluid">
             <div class="py-5"></div>
+            <div class="py-2" id="save-info"></div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <button
@@ -81,7 +82,7 @@
                                             type="submit"
                                             class="btn btn-outline-success fw-bold"
                                         >
-                                            Save changes
+                                            Save
                                         </button>
                                     </div>
                                 </form>
@@ -91,22 +92,22 @@
                 </div>
             </div>
             <div id="confirmation" class="pt-5"></div>
-            <div id="todo-list"></div>
+            <div id="todo-list" data-aos="fade-up"></div>
 
-            <div class="d-flex justify-content-center py-5">
+            <div class="d-flex justify-content-center py-5 pt-5">
                 <button
                     class="btn btn-outline-success"
                     id="save-todo"
                     onclick="{saveTodo()}"
                 >
-                    Save
+                    Save Changes
                 </button>
             </div>
             <div class="d-flex justify-content-center">
                 <button
                     class="btn btn-outline-success"
                     id="delete-todo"
-                    onclick="{deleteTodo()}"
+                    onclick="{clearTodo()}"
                 >
                     Clear All
                 </button>
@@ -126,3 +127,4 @@
         </script>
     </body>
 </html>
+
